Fixed signature image being centered instead of left aligned

--- a/assets/stylesheets/common/signatures.scss
+++ b/assets/stylesheets/common/signatures.scss
@@ -4,7 +4,7 @@
   width: auto;
   height: auto;
   display: block;
-  margin: 5px auto;
+  margin: 5px 0;
 }
 
 .signature-img {
@@ -13,5 +13,5 @@
   width: auto;
   height: auto;
   display: block;
-  margin: 5px auto;
+  margin: 5px 0;
 }
